- Management console:
	- Fixed broken popup menu actions on "Interfaces" tab
	- Macro %USERNAME%4 can be used in object tools
	- VLAN highlight on port selection in VLAN view
	- "Use multipliers" option in DCI summary tables
	- "Zoom to fit" action in network maps
	- "Always fit layout to screen" option in network maps
- Fixed issues: #690, #693, #725, #752, #756, #765, #766, #767, #768, #769, #770, #771


*
* 2.0-M2
*

- Fixed server hang issue on some Windows versions
- Fixed SNMPv3 communication issue with HP A series switches
- Fixed LDAP sync problems on Windows
- Russian translation improved
- New MIB added: SYMBOL-CC-WS2000-MIB
- Subagent for reading DS18T20 and DS18S20 temperature sensors on Linux
- Fixed issues: #675, #699, #716, #721, #735, #736, #737, #742, #744


*
* 2.0-M1
*

- New hook script "AcceptNewNode" (can be used as additional filter for network discovery to avoid unnecessary communications)
- SMS driver for Kannel gateway
- Oracle subagent: added parameter Oracle.CriticalStats.Deadlocks
- Reporting server improved
- Code page option added to all client command line tools (nxalarm, nxevent, nxpush, nxsms)
- New NXSL functions: GetNodeTemplates
- New parameters in Windows agent: System.Update.LastDetectTime, System.Update.LastDownloadTime, System.Update.LastInstallTime
- Network service response time can be monitored
- Added driver for HP A-series and V-series switches
- MIB compiler correctly handles REFERENCE keyword in agent capabilities section
- Oracle Tuxedo monitoring subagent
- Improved server performance with PostgreSQL
- Alias and MTU collected and stored for interfaces
- Server uses ipAddressTable and ipAddressPrefixTable to collect configured IP addresses when supported by monitored nodes
- Management console:
    - New dashboard element "DCI summary table"
    - Cluster objects shown on status maps
- Android console:
    - Added date in X axis (graphs) when the time frame is greather that one day