@@ -13,7 +13,8 @@
 	- "Use multipliers" option in DCI summary tables
 	- "Zoom to fit" action in network maps
 	- "Always fit layout to screen" option in network maps
-- Fixed issues: #690, #693, #725, #752, #756, #765, #766, #767, #768, #769, #770, #771
+	- Last selected zoom level preserved on network map close
+- Fixed issues: #690, #693, #725, #752, #756, #758, #765, #766, #767, #768, #769, #770, #771
 
 
 *
